terraform/modules/rg-app/chart/templates/api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/part-of: rg-app
    app.kubernetes.io/name: api
spec:
  selector:
    app.kubernetes.io/part-of: rg-app
    app.kubernetes.io/name: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
  type: ClusterIP
